--- a/renovate.json
+++ b/renovate.json
@@ -18,6 +18,11 @@
 			"matchDatasources": ["docker"],
 			"matchPackageNames": ["linuxserver/prowlarr"],
 			"versionScheme": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-nightly?$"
+		},
+		{
+			"matchDatasources": ["docker"],
+			"matchPackageNames": ["lscr.io/linuxserver/qbittorren"],
+			"versionScheme": "regex:^(?<major>\\d)\\.(?<minor>\\d)\\.(?<patch>\\d)?$"
 		}
 	]
 }
