--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - 8388:8388/tcp # Shadowsocks
       - 8388:8388/udp # Shadowsocks
       - 8090:8090
+      - 8112:8112
       - 6881:6881
       - 6881:6881/udp
     volumes:
@@ -89,7 +90,8 @@ services:
     network_mode: host
     depends_on:
       - web
-      - qbittorrent
+        #- qbittorrent
+      - deluge
       - influxdb
       - grafana
       - telegraf
@@ -165,19 +167,33 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./services/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
 
-  qbittorrent:
-    image: lscr.io/linuxserver/qbittorrent:4.6.3
-    container_name: qbittorrent
+  deluge:
+    image: lscr.io/linuxserver/deluge:2.1.1
+    container_name: deluge
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Europe/Amsterdam
-      - WEBUI_PORT=8090
     volumes:
-      - /home/tim/qbittorrent/appdata:/config
-      - /home/tim/nas/media/qbittorrent/downloads:/downloads
+      - /home/tim/deluge/config:/config
+      - /home/tim/nas/media/deluge/downloads:/downloads
     restart: unless-stopped
     network_mode: "service:gluetun"
+
+
+      #  qbittorrent:
+      #    image: lscr.io/linuxserver/qbittorrent:4.6.3
+      #    container_name: qbittorrent
+      #    environment:
+      #      - PUID=1000
+      #      - PGID=1000
+      #      - TZ=Europe/Amsterdam
+      #      - WEBUI_PORT=8090
+      #    volumes:
+      #      - /home/tim/qbittorrent/appdata:/config
+      #      - /home/tim/nas/media/qbittorrent/downloads:/downloads
+      #    restart: unless-stopped
+      #    network_mode: "service:gluetun"
 
   sonarr:
     image: linuxserver/sonarr:4.0.1
@@ -186,7 +202,8 @@ services:
     depends_on:
       - web
       - prowlarr
-      - qbittorrent
+        #- qbittorrent
+      - deluge
     environment:
       - PUID=1000
       - PGID=1000
@@ -194,7 +211,8 @@ services:
     volumes:
       - /home/tim/sonarr/data:/config
       - /home/tim/nas/media/sonarr/tvseries:/tv
-      - /home/tim/nas/media/qbittorrent/downloads:/downloads
+        #- /home/tim/nas/media/qbittorrent/downloads:/downloads
+      - /home/tim/nas/media/deluge/downloads:/downloads
     ports:
       - 8989:8989
     restart: unless-stopped
@@ -208,7 +226,8 @@ services:
     depends_on:
       - web
       - prowlarr
-      - qbittorrent
+        #- qbittorrent
+      - deluge
     environment:
       - PUID=1000
       - PGID=1000
@@ -216,7 +235,8 @@ services:
     volumes:
       - /home/tim/radarr/data:/config
       - /home/tim/nas/media/radarr/movies:/movies
-      - /home/tim/nas/media/qbittorrent/downloads:/downloads
+        #- /home/tim/nas/media/qbittorrent/downloads:/downloads
+      - /home/tim/nas/media/deluge/downloads:/downloads
     ports:
       - 7878:7878
     restart: unless-stopped
