--- a/renovate.json
+++ b/renovate.json
@@ -21,8 +21,8 @@
 		},
 		{
 			"matchDatasources": ["docker"],
-			"matchPackageNames": ["lscr.io/linuxserver/qbittorren"],
-			"versionScheme": "regex:^(?<major>\\d)\\.(?<minor>\\d)\\.(?<patch>\\d)?$"
+			"matchPackageNames": ["lscr.io/linuxserver/deluge"],
+			"versionScheme": "regex:^(?<major>\\d)\\.(?<minor>\\d+)\\.(?<patch>\\d+)?$"
 		}
 	]
 }
