--- a/renovate.json
+++ b/renovate.json
@@ -18,6 +18,11 @@
 			"matchDatasources": ["docker"],
 			"matchPackageNames": ["lscr.io/linuxserver/deluge"],
 			"versionScheme": "regex:^(?<major>\\d)\\.(?<minor>\\d+)\\.(?<patch>\\d+)?$"
+		},
+		{
+			"matchDatasources": ["docker"],
+			"matchPackageNames": ["lscr.io/linuxserver/prowlarr"],
+			"versionScheme": "regex:^(?<major>\\d)\\.(?<minor>\\d+)\\.(?<patch>\\d+)?$"
 		}
 	]
 }
