--- a/renovate.json
+++ b/renovate.json
@@ -6,23 +6,13 @@
 	[
 		{
 			"matchDatasources": ["docker"],
-			"matchPackageNames": ["linuxserver/duckdns"],
-			"versionScheme": "regex:^version-(?<major>)?$"
-		},
-		{
-			"matchDatasources": ["docker"],
 			"matchPackageNames": ["linuxserver/radarr"],
 			"versionScheme": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-nightly?$"
 		},
 		{
 			"matchDatasources": ["docker"],
-			"matchPackageNames": ["lscr.io/linuxserver/deluge"],
-			"versionScheme": "regex:^(?<major>\\d)\\.(?<minor>\\d+)\\.(?<patch>\\d+)?$"
-		},
-		{
-			"matchDatasources": ["docker"],
 			"matchPackageNames": ["lscr.io/linuxserver/prowlarr"],
-			"versionScheme": "regex:^(?<major>\\d)\\.(?<minor>\\d+)\\.(?<patch>\\d+)?$"
+			"versionScheme": "regex:^(?<major>\\d)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-nightly?$"
 		}
 	]
 }
