--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -231,7 +231,7 @@ services:
       - home-web
 
   readarr:
-    image: lscr.io/linuxserver/readarr:nightly-version-0.4.0.2593
+    image: lscr.io/linuxserver/readarr:0.4.5-nightly
     container_name: readarr
     environment:
       - PUID=1000
