--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -330,7 +330,7 @@ services:
 
   pihole:
     container_name: pihole
-    image: pihole/pihole:2025.02.4
+    image: pihole/pihole:2024.07.0
     user: "0"
     ports:
       - 53:53/tcp
@@ -341,9 +341,11 @@ services:
       - web
     environment:
       - TZ=Netherlands/Amsterdam
-      - FTLCONF_webserver_api_password=${PIHOLE_PASSWORD}
+      - WEBPASSWORD=${PIHOLE_PASSWORD}
       - VIRTUAL_PORT=80
-      - FTLCONF_misc_etc_dnsmasq_d='true'
+      - VIRTUAL_HOST=pihole.home
+      - DNS1=1.1.1.1
+      - DNS2=1.0.0.1
     volumes:
       - /home/tim/pihole/etc-pihole/:/etc/pihole/
       - /home/tim/pihole/etc-dnsmasq.d/:/etc/dnsmasq.d/
@@ -356,8 +358,7 @@ services:
 
         #  pihole:
         #    container_name: pihole
-        #    image: pihole/pihole:2024.07.0
-        #    user: "0"
+        #    image: pihole/pihole:2025.02.4
         #    ports:
         #      - 53:53/tcp
         #      - 53:53/udp
@@ -367,16 +368,10 @@ services:
         #      - web
         #    environment:
         #      - TZ=Netherlands/Amsterdam
-        #      - WEBPASSWORD=${PIHOLE_PASSWORD}
-        #      - VIRTUAL_PORT=80
-        #      - VIRTUAL_HOST=pihole.home
-        #      - DNS1=1.1.1.1
-        #      - DNS2=1.0.0.1
+        #      - FTLCONF_webserver_api_password=${PIHOLE_PASSWORD}
         #    volumes:
         #      - /home/tim/pihole/etc-pihole/:/etc/pihole/
-        #      - /home/tim/pihole/etc-dnsmasq.d/:/etc/dnsmasq.d/
         #    dns:
-        #      - 127.0.0.1
         #      - 1.1.1.1
         #    restart: unless-stopped
         #    networks:
