Commenting out telegraf options that are not working

--- a/services/telegraf/telegraf.conf
+++ b/services/telegraf/telegraf.conf
@@ -61,7 +61,7 @@
   gather_services = false
 
   ## Only collect metrics for these containers, collect all if empty
-  container_names = []
+  #container_names = []
 
   ## Containers to include and exclude. Globs accepted.
   ## Note that an empty array for both will include all containers
@@ -73,9 +73,9 @@
 
   ## Whether to report for each container per-device blkio (8:0, 8:1...) and
   ## network (eth0, eth1, ...) stats or not
-  perdevice = true
+  #perdevice = true
   ## Whether to report for each container total blkio and network stats or not
-  total = false
+  #total = false
 
   ## docker labels to include and exclude as tags.  Globs accepted.
   ## Note that an empty array for both will include all labels as tags
