--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -281,7 +281,7 @@ services:
       - home-web
 
   audiobookshelf:
-    image: ghcr.io/advplyr/audiobookshelf:v2.25.1
+    image: ghcr.io/advplyr/audiobookshelf:2.25.1
     container_name: audiobookshelf
     ports:
       - 13378:13378
